[package]
name = "matrix-eyes"
version = "0.1.5"
edition = "2024"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/matrix-eyes"
license = "Apache-2.0"
rust-version = "1.89"

[dependencies]
burn = { version = "0.19", default-features = false, features = ["std"] }
burn-import = { version = "0.19", default-features = false, features = ["pytorch"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
kamadak-exif = { version = "0.6", default-features = false }
indicatif = { version = "0.18", default-features = false }
rand = { version = "*", features = ["std", "std_rng", "small_rng"] }

[features]
default = ["ndarray"]
autotune = ["burn/autotune"]
fusion = ["burn/fusion"]
ndarray = ["burn/ndarray"]
ndarray-accelerate = ["burn/ndarray", "burn/accelerate"]
wgpu-metal = ["burn/metal"]
wgpu-spirv = ["burn/vulkan"]
cuda = ["burn/cuda"]
f16 = []
bf16 = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
